--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": "~5.6|~7.0",
-    "ezsystems/ezpublish-kernel": "~6.8"
+    "ezsystems/ezpublish-kernel": "~6.8",
+    "ezsystems/ezstudio-form-builder": "~1.1"
   },
   "autoload": {
     "psr-0": { "Smile\\EzEESectionFormFieldBundle": "" }
